Bug 133482 - Changing the data table of a graph enlarges the window.
Summary: Changing the data table of a graph enlarges the window.
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.0.1 rc
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0 target:7.0.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-05-28 18:10 UTC by hugo.leroux
Modified: 2020-09-23 15:26 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description hugo.leroux 2020-05-28 18:10:24 UTC
Description:
Video at: http://cloud.sneak.ovh/s/YrZAy2p2NcefPwP

Steps to Reproduce:
1.Create diagram
2.Edit table of data
3.Add column

Actual Results:
The data window expands

Expected Results:
Only one column should appear.


Reproducible: Always


User Profile Reset: No


OpenGL enabled: Yes

Additional Info:
[Information automatically included from LibreOffice]
Locale: fr
Module: TextDocument
[Information guessed from browser]
OS: Linux (All) (SolusOS)
OS is 64bit: yes
Version : 6.4.1.2
Build ID : 40(Build:2)
Threads CPU : 8; OS : Linux 5.6; UI Render : par défaut; VCL: gtk3; 
Locale : fr-FR (fr_FR.UTF-8); Langue IHM : fr-FR
Calc: threaded
Comment 1 BogdanB 2020-05-28 18:55:19 UTC
This bug is not in
Version: 6.3.5.2
Build ID: dd0751754f11728f69b42ee2af66670068624673
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3; 
Locale: ro-RO (ro_RO.UTF-8); UI-Language: en-US
Calc: threaded

But first apear in
Version: 6.4.0.3
Build ID: b0a288ab3d2d4774cb44b62f04d5d28733ac6df8
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3; 
Locale: ro-RO (ro_RO.UTF-8); UI-Language: en-US
Calc: threaded

Confirm it on
Version: 7.0.0.0.alpha1+
Build ID: 49fc4913ba7fc4a0be2e32407205edd8f31b3172
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3; 
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2020-05-22_14:04:10
Calc: threaded
Comment 2 BogdanB 2020-05-30 05:35:45 UTC
bibisected
 5e20060d9c37e310a5ad088d1af9789203d5ff97 is the first bad commit
commit 5e20060d9c37e310a5ad088d1af9789203d5ff97
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Fri Sep 27 01:58:03 2019 +0200

    source aa7e7747f4296b3b92379c3c7703b80ad8af6a8b
    
    source aa7e7747f4296b3b92379c3c7703b80ad8af6a8b

 instdir/program/libchartcontrollerlo.so            | Bin 3806896 -> 3727680 bytes
 instdir/program/versionrc                          |   2 +-
 instdir/share/config/images_breeze.zip             | Bin 1752870 -> 1752870 bytes
 instdir/share/config/images_breeze_dark.zip        | Bin 1745403 -> 1745403 bytes
 instdir/share/config/images_breeze_svg.zip         | Bin 1421304 -> 1421304 bytes
 instdir/share/config/images_colibre.zip            | Bin 2513042 -> 2513042 bytes
 instdir/share/config/images_colibre_svg.zip        | Bin 2257010 -> 2257010 bytes
 instdir/share/config/images_elementary.zip         | Bin 3819411 -> 3819411 bytes
 instdir/share/config/images_elementary_svg.zip     | Bin 4606102 -> 4606102 bytes
 instdir/share/config/images_karasa_jaga.zip        | Bin 4798174 -> 4798174 bytes
 instdir/share/config/images_karasa_jaga_svg.zip    | Bin 18680443 -> 18680443 bytes
 instdir/share/config/images_sifr.zip               | Bin 1286798 -> 1286798 bytes
 instdir/share/config/images_sifr_dark.zip          | Bin 1329470 -> 1329470 bytes
 instdir/share/config/images_sifr_svg.zip           | Bin 931900 -> 931900 bytes
 instdir/share/config/images_tango.zip              | Bin 1779974 -> 1779974 bytes
 .../modules/schart/ui/chartdatadialog.ui           |  50 ++++-----------------
 .../modules/schart/ui/columnfragment.ui            |  34 ++++++++++++++
 .../soffice.cfg/modules/schart/ui/imagefragment.ui |  22 +++++++++
 18 files changed, 66 insertions(+), 42 deletions(-)
 create mode 100644 instdir/share/config/soffice.cfg/modules/schart/ui/columnfragment.ui
 create mode 100644 instdir/share/config/soffice.cfg/modules/schart/ui/imagefragment.ui
Comment 3 Aron Budea 2020-09-12 07:49:53 UTC
That is the following commit. Adding CC: to Caolán McNamara.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=aa7e7747f4296b3b92379c3c7703b80ad8af6a8b
author		Caolán McNamara <caolanm@redhat.com>	2019-09-25 14:15:38 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2019-09-26 13:21:22 +0200

weld DataEditor
Comment 4 Caolán McNamara 2020-09-17 14:53:49 UTC
The vcl dialog is happy to let its contents get clipped out while the gtk dialog is resizing to fit its children.
Comment 5 Commit Notification 2020-09-17 20:13:40 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b70b1636b0c71dbb6f6f4f07ebdafeba94261dee

tdf#133482 don't increase dialog width when new columns added

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2020-09-17 20:14:30 UTC
works for me now in master, backport to 7-0 in gerrit
Comment 7 Commit Notification 2020-09-21 22:36:39 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/34330cbf4cc3cd558b18563582a577ea5306b84e

tdf#133482 don't increase dialog width when new columns added

It will be available in 7.0.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 BogdanB 2020-09-23 15:26:35 UTC
It's fixed now. 

Verified in
Version: 7.1.0.0.alpha0+
Build ID: 121771e37f7e2de41cd5643475861062bf25627b
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded