tdf#133482 don't increase dialog width when new columns added

gtk will expand to fit all children, while vcl will clip.
insert a borderless ScrolledWindow with "external" scrolling
to allow the dialog to clip the children (same thing we do
for our menubar to shrink down past its natural size)

adjust the width calculation to avoid logictopixel rounding

Change-Id: Id2e4f92959f1827c6960360d1530a9c63a4d0c00
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/102972
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>